<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentTime"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeFragment">

    <TextView
        android:id="@+id/tvMyName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMyRa4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_ra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMyName4" />

    <TextView
        android:id="@+id/tvTitleTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/time"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvMyRa4"
        app:layout_constraintTop_toBottomOf="@+id/tvMyRa4" />

    <Button
        android:id="@+id/btnBuscarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="48dp"
        android:text="@string/btnBuscarTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodigoTime"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTime" />

    <EditText
        android:id="@+id/etCodigoTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="82dp"
        android:ems="10"
        android:hint="@string/etCodigoTime"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="@+id/btnBuscarTime"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBuscarTime" />

    <EditText
        android:id="@+id/etNomeTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="77dp"
        android:ems="10"
        android:hint="@string/etNomeTime"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="@+id/etCidadeTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCodigoTime" />

    <EditText
        android:id="@+id/etCidadeTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/etCidadeTime"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnInserirTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="@+id/etCidadeTime"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <Button
        android:id="@+id/btnExcluirTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="@+id/btnInserirTime"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirTime" />

    <Button
        android:id="@+id/btnListarTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="@+id/btnModificarTime"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarTime" />

    <Button
        android:id="@+id/btnModificarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="@+id/etCidadeTime"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <TextView
        android:id="@+id/tvListarTimes"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textAlignment="center"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>